data/all_generated_tests/raw_wast_tests/if_StackCorruption_1429.wast
;; 10. **Test Name: Operand Underflow Handling**    - **Description**: Design `if` constructs to operate with inadequate initial operands purposely, verifying whether implementations correctly identify stack underflows and trigger relevant error or trap handling.      ```wasm      (if (result i32) (drop) (else (nop)) end)      ```    - **Reasoning**: Verifies how enforcement and response to operand deficiencies are implemented concerning the initial stack state and post-condition evaluation in `if` constructs.

(assert_invalid
  (module (func $operand_underflow_handling
    (if (result i32) (drop) (else (nop)) end)
  ))
  "type mismatch"
)